DecepitNet/k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: deceptinet
  labels:
    name: deceptinet
    environment: production
    app: deceptinet-platform
